objects/AIA_Benefit_Design_Form__c.object
<CustomObject>
    <fields>
        <fullName>ADR_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.ADR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADR Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AIA_Lead_Rep_Name__r.FirstName +' ' +Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AIA_Lead_Rep_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <description>Old formula value: Benefit_Design__r.Implementation__r.Opportunity__r.AE_Name__c</description>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AIA_Lead_Rep_Name__r.FirstName +' ' +Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AIA_Lead_Rep_Name__r.LastName</formula>
        <label>AE Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Name_Drawloop__c</fullName>
        <description>Old Formula:Text(Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep__c)</description>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep_s__r.FirstName +' ' +Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep_s__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Name__c</fullName>
        <description>Old formula : Benefit_Design__r.Implementation__r.Opportunity__r.AM_Name__c
Changed as per story: https://www13.v1host.com/CareFirst/Search.mvc/Advanced?q=3983

Old Formula:Text(Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep__c)</description>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep_s__r.FirstName +' ' +Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.Service_Rep_s__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Phone_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Account_Manager_Account_Team__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Phone Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date__c</fullName>
        <description>old formula : Benefit_Design__r.Benefit_Request_Form__r.ARC_Approval_Date__c, to reduce the hops updating the formula to take the ARC approval date from BD</description>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.ARC_Approval_Date__c

/*Benefit_Design__r.Drawloop_ARC_Approval_Date__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acc_Mngr_Email_Drawloop__c</fullName>
        <formula>Benefit_Design_Product__r.Benefit_Design__r.Benefit_Request_Form__r.Account_Manager_Account_Team__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Mngr Email Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Service_Rep_Drwloop__c</fullName>
        <formula>Benefit_Design__r.Implementation__r.Opportunity__r.Lead_Rep_Name_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Service Rep Drwloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <formula>Benefit_Design__r.Account__r.BillingStreet +' '+ BR() + 
Benefit_Design__r.Account__r.BillingCity +IF(Benefit_Design__r.Account__r.BillingCity !='' &amp;&amp; Benefit_Design__r.Account__r.BillingState!='' , ' , ', '') +Benefit_Design__r.Account__r.BillingState + BR() + 
Benefit_Design__r.Account__r.BillingCountry + IF(Benefit_Design__r.Account__r.BillingCountry!='' &amp;&amp; Benefit_Design__r.Account__r.BillingPostalCode!='' , ' , ', '')+ Benefit_Design__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_EIN_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Account__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account EIN Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Effective_Date__c</fullName>
        <formula>Benefit_Design__r.Account__r.Account_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_External_Review_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External review process for Self Insured non-grandfathered accounts only</inlineHelpText>
        <label>Account External Review Vendor Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_External_Review_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External review process for Self Insured non-grandfathered accounts only</inlineHelpText>
        <label>Account External Review Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Benefit_Design__r.Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Product Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_SIC_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Account__r.Sic</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SIC Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Address__c</fullName>
        <formula>Benefit_Design__r.Account__r.ShippingStreet +' '+ BR() + 
Benefit_Design__r.Account__r.ShippingCity +IF(Benefit_Design__r.Account__r.ShippingCity !='' &amp;&amp; Benefit_Design__r.Account__r.ShippingState!='' , ' , ', '') +Benefit_Design__r.Account__r.ShippingState + BR() + 
Benefit_Design__r.Account__r.ShippingCountry + IF(Benefit_Design__r.Account__r.ShippingCountry!='' &amp;&amp; Benefit_Design__r.Account__r.ShippingPostalCode!='' , ' , ', '')+ Benefit_Design__r.Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Other_Employees_Desctiption__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Active Employees Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Other_Employees__c</fullName>
        <label>Other Active Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actives__c</fullName>
        <defaultValue>'Remain in Active Product'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Actives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Vendor__c</fullName>
        <inlineHelpText>CDH Accounts Only</inlineHelpText>
        <label>CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
                <value>
                    <fullName>BlueFund/Compatible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Non_Standard_RTF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional / Non Standard</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additionall_Dependent_Definition__c</fullName>
        <defaultValue>"Includes: Any child/grandchild in the custody guardianship of the subscriber or spouse pursuant to a court order, testamentary appointment or a child who is the subject of a court/administrative order or Qualified Medical Child Support Order, and Student Dependents with disabilities under Michelle’s Law and the Maryland part-time Students with Disabilities Law."+BR()+"Disabled Dependent’s coverage will continue past the limiting age if disabled prior to reaching the limiting age as stated above."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Dependent Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Comments_4a__c</fullName>
        <defaultValue>"Federal Mandate after 6/1/2010 - Limiting age is 26 for Fully- insured accounts."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>All Child Dependents Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Comments_4b__c</fullName>
        <defaultValue>"Limiting age is 26 for Fully- insured accounts."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>All Child Dependents Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Comments__c</fullName>
        <defaultValue>"Self-insured accounts MUST select limiting age 26 or greater whether they are grandfathered or non-grandfathered."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>All Child Dependents Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Limiting_Age_4b__c</fullName>
        <defaultValue>26</defaultValue>
        <label>All Child Dependents Limiting Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Limiting_Age__c</fullName>
        <label>All Child Dependents Limiting Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Removal_Method_4b__c</fullName>
        <label>All Child Dependents Removal Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Month</fullName>
                </value>
                <value>
                    <fullName>On Birthday</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Child_Dependents_Removal_Method__c</fullName>
        <label>All Child Dependents Removal Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alpha Prefix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnswerC2b__c</fullName>
        <label>Answer C2b</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_2a__c</fullName>
        <label>Answer C2a</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Sex</fullName>
                </value>
                <value>
                    <fullName>Opposite Sex</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_6p__c</fullName>
        <label>Answer 6</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer B</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_C1__c</fullName>
        <label>Answer C1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C3__c</fullName>
        <label>Answer C3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C4__c</fullName>
        <label>Answer C4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C5b__c</fullName>
        <label>Answer C5b</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_C7a__c</fullName>
        <inlineHelpText>Enter a number from 3-36</inlineHelpText>
        <label>Answer C7a</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_C7b__c</fullName>
        <label>Answer C7b</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_D1__c</fullName>
        <label>Answer D1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Answer_C6__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_D2__c</fullName>
        <label>Answer D2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Answer_C6__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_D3__c</fullName>
        <label>Answer D3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Answer_C6__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_E_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer E -Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_E__c</fullName>
        <label>Answer E</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_F__c</fullName>
        <label>Answer F</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_Behavioral_Analysis__c</fullName>
        <inlineHelpText>(MD/VA-M only) – effective 1/2/2015 – Magellan handles</inlineHelpText>
        <label>Applied Behavioral Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Artificial_Insemination_IVF__c</fullName>
        <label>Artificial Insemination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Sleep_Studies__c</fullName>
        <inlineHelpText>For Smart Selection Products Only</inlineHelpText>
        <label>Attended Sleep Studies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BC_Plan_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BC - Plan Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRCA_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BRCA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRF_Control_Plan_Drawloop__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Control_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Control Plan Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Drawloop__c</fullName>
        <formula>Benefit_Design__r.BRF_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Number_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Number Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BS_Plan_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BS - Plan Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Benefit_Design__c</field>
                <operation>equals</operation>
                <valueField>AIA_Benefit_Design_Product__c.Benefit_Design__c</valueField>
            </filterItems>
            <filterItems>
                <field>AIA_Benefit_Design_Product__c.Product_Category__c</field>
                <operation>equals</operation>
                <value>Medical</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>Benefit Design Form</relationshipLabel>
        <relationshipName>Benefit_Design_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Benefit Design Form</relationshipLabel>
        <relationshipName>Benefit_Design_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benefit_Selection__c</fullName>
        <label>Benefit Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Exclusion</fullName>
                </value>
                <value>
                    <fullName>Emergency Contraception Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bq__c</fullName>
        <defaultValue>'If group does not recognize same-sex spouse under definition of spouse, include same-sex marriages here.'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4q__c</fullName>
        <defaultValue>'The Subscriber and Domestic Partner share no blood or familial relationship that would bar marriage under the laws of the state in which the couple resides, and neither the Subscriber nor the Domestic Partner is a member of another domestic partnership or substantially similar relationship.'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C5aq__c</fullName>
        <defaultValue>'The Subscriber and Domestic Partner have shared a common legal residence continuously for at least how many months '</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C5a</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C5bq__c</fullName>
        <defaultValue>'The Subscriber and Domestic Partner have submitted documentary evidence of such cohabitation that is satisfactory to the Group.'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C5b</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C6q__c</fullName>
        <defaultValue>'The Subscriber and Domestic Partner are financially interdependent and submit documentary evidence of such interdependence that is satisfactory to the Group; have both signed the appropriate affidavit, enrollment application, or other document(s) required by the Group, confirming their domestic partnership and agree to notify the Group in writing of the termination of the domestic partnership within 30 days of the date of termination.'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C6</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C7aq__c</fullName>
        <defaultValue>'For past how many months the Subscriber and/or Domestic Partner have not been a member of another domestic partnership or substantially similar relationship  '</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C7a</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C7bq__c</fullName>
        <defaultValue>'The Subscriber and/or Domestic Partner have not been a member of another domestic partnership or substantially similar relationship within the past number of months answered in question 7A above.'</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>C7b</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COB_Pay_and_Pursue__c</fullName>
        <formula>IF((Funding_Arrangement_Drawloop__c == 'Risk' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; (Text(ERISA_Status__c) == 'Yes' || Text(ERISA_Status__c) == 'No' )),'No',
IF((Funding_Arrangement_Drawloop__c == 'ASO' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; Text(ERISA_Status__c) == 'No'),'No','Yes'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COB Pay and Pursue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_Type_Comments__c</fullName>
        <defaultValue>"COB monitored post payment with every 12 months recertification (Pay and Pursue)"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>COB Type Comments</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COB_Type_Pay_and_Pursue__c</fullName>
        <formula>IF((Funding_Arrangement_Drawloop__c == 'Risk' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; (Text(ERISA_Status__c) == 'Yes' || Text(ERISA_Status__c) == 'No' )),'No',
IF((Funding_Arrangement_Drawloop__c == 'ASO' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; Text(ERISA_Status__c) == 'No'),'No','Yes'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COB Type Pay and Pursue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_Type__c</fullName>
        <inlineHelpText>Note 1: COB – Regular is used as the standard for DC accounts. Any selection other than COB-Regular for a DC control group requires non-standard approval through the ARC approval process 
Note 2: If COB type equals Modified Aggregate, Medical Product C</inlineHelpText>
        <label>COB Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modified Aggregate</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Non-Duplication</fullName>
                </value>
                <value>
                    <fullName>Carve Out</fullName>
                </value>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Not-Applicable</fullName>
                    <isActive>false</isActive>
                    <label>Not-Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carefirst_External_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External review process for Self Insured non-grandfathered accounts only</inlineHelpText>
        <label>Carefirst External Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Dependent_Commnets__c</fullName>
        <defaultValue>"If marked yes, includes Medicare-eligible Child Dependents due to TEFRA/DEFRA."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Dependent Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Dependent_Mandates1__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Dependent Mandates1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Dependent_Mandates__c</fullName>
        <inlineHelpText>Select either Maryland, DC/VA, or Custom.</inlineHelpText>
        <label>Child Dependent Mandates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>DC/VA</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Dependents_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Dependents Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Dependents_Limit_Age_4a__c</fullName>
        <defaultValue>26</defaultValue>
        <inlineHelpText>Limiting age is 26 for Fully-insured accounts.</inlineHelpText>
        <label>All Child Dependents Limiting Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Dependents_Limit_Age__c</fullName>
        <defaultValue>26</defaultValue>
        <label>Child Dependents Limit Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Dependents_Removal_Method_4a__c</fullName>
        <label>All Child Dependents Removal Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Month</fullName>
                </value>
                <value>
                    <fullName>On Birthday</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Dependents_Removal__c</fullName>
        <label>Child Dependents Removal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Child_Dependent_Mandates__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Birthdate</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Year</fullName>
                </value>
                <value>
                    <fullName>When Eligibility Ceases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Dependents__c</fullName>
        <label>Child Dependents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>